--- a/.env.local.example
+++ b/.env.local.example
@@ -1,2 +1,10 @@
+# App config
 NODE_ENV=development
 PORT=4000
+
+# Database config
+POSTGRES_USER=root
+POSTGRES_PASSWORD=root
+POSTGRES_DB=strawpoll
+POSTGRES_PORT=5432
+POSTGRES_HOST=localhost
