--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "scripts": {
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
+    "prestart": "mikro-orm migration:run",
     "start": "nest start",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
@@ -20,7 +21,9 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@mikro-orm/cli": "^5.7.14",
     "@mikro-orm/core": "^5.7.14",
+    "@mikro-orm/migrations": "^5.7.14",
     "@mikro-orm/nestjs": "^5.2.1",
     "@mikro-orm/postgresql": "^5.7.14",
     "@mikro-orm/reflection": "^5.7.14",
@@ -31,6 +34,7 @@
     "@nestjs/swagger": "^7.1.10",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "dotenv": "^16.3.1",
     "joi": "^17.10.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
@@ -74,5 +78,12 @@
     ],
     "coverageDirectory": "../coverage",
     "testEnvironment": "node"
+  },
+  "mikro-orm": {
+    "useTsNode": true,
+    "configPaths": [
+      "./src/config/mikro-orm.config.ts",
+      "./dist/config/mikro-orm.config.js"
+    ]
   }
 }
