--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     image: postgres:15.3
     restart: unless-stopped
     env_file:
-      - .env.local
+      - .env
     ports:
       - "5432:5432"
     volumes:
