--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "class-transformer": "0.5.1",
     "class-validator": "0.14.1",
     "dotenv": "16.4.1",
+    "nestjs-real-ip": "3.0.1",
     "reflect-metadata": "0.1.13",
     "rxjs": "7.8.1",
     "zod": "3.22.4"
