--- a/package.json
+++ b/package.json
@@ -31,13 +31,16 @@
     "@nestjs/config": "3.1.1",
     "@nestjs/core": "10.3.1",
     "@nestjs/platform-express": "10.3.1",
+    "@nestjs/platform-socket.io": "10.3.3",
     "@nestjs/swagger": "7.2.0",
+    "@nestjs/websockets": "10.3.3",
     "class-transformer": "0.5.1",
     "class-validator": "0.14.1",
     "dotenv": "16.4.1",
     "nestjs-real-ip": "3.0.1",
     "reflect-metadata": "0.1.13",
     "rxjs": "7.8.1",
+    "socket.io": "4.7.4",
     "zod": "3.22.4"
   },
   "devDependencies": {
