--- a/.env.example
+++ b/.env.example
@@ -3,9 +3,10 @@ APP_ENV=local
 PORT=4000
 
 # Database config
-POSTGRES_USER=root
-POSTGRES_PASSWORD=root
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=postgres
 POSTGRES_DB=strawpoll
 POSTGRES_PORT=5432
-POSTGRES_HOST=localhost
+# db is the name of the service in the docker-compose.yml, use localhost if you are not using docker
+POSTGRES_HOST=db
 POSTGRES_CERT=
