--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,26 +1,25 @@
-version: '3'
+version: '3.8'
 
 services:
-  pgDatabase:
-    image: postgres:15.3
-    restart: unless-stopped
+  app:
+    build:
+      context: .
+    ports:
+      - "${PORT}:${PORT}"
     env_file:
       - .env
+    depends_on:
+      - db
+
+  db:
+    image: postgres:16
     ports:
-      - "5432:5432"
+      - "${POSTGRES_PORT}:${POSTGRES_PORT}"
+    env_file:
+      - .env
     volumes:
       - ./scripts:/docker-entrypoint-initdb.d
-      - strawpoll-db:/var/lib/postgresql/data
-  pgAdmin:
-    image: dpage/pgadmin4
-    restart: unless-stopped
-    environment:
-      PGADMIN_DEFAULT_EMAIL: admin@admin.com
-      PGADMIN_DEFAULT_PASSWORD: admin
-    ports:
-      - "8080:80"
-    volumes:
-      - strawpoll-pgAdmin:/var/lib/pgadmin
+      - postgres_data:/var/lib/postgresql/data
+
 volumes:
-  strawpoll-db:
-  strawpoll-pgAdmin:
+  postgres_data:
